--- a/AutoWatering/CMakeLists.txt
+++ b/AutoWatering/CMakeLists.txt
@@ -9,6 +9,19 @@ project(AutoWatering C CXX ASM)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 
+# 1 Create an INTERFACE library aggregating all the common parts of the application
+add_library(decodingFSM INTERFACE)
+
+target_sources(decodingFSM INTERFACE
+    ${CMAKE_CURRENT_LIST_DIR}/main.c
+    ${CMAKE_CURRENT_LIST_DIR}/decoding-fsm/decoding_fsm.c
+)
+
+# Link to pico_stdlib (gpio, time, etc. functions)
+target_link_libraries(decodingFSM INTERFACE
+    pico_stdlib
+)
+
 # Creates a pico-sdk subdirectory in our project for the libraries
 pico_sdk_init()
 
@@ -17,14 +30,10 @@ add_executable(${PROJECT_NAME}
     main.c
 )
 
+target_link_libraries(${PROJECT_NAME} decodingFSM)
+
 # Create map/bin/hex/uf2 files
 pico_add_extra_outputs(${PROJECT_NAME})
-
-
-# Link to pico_stdlib (gpio, time, etc. functions)
-target_link_libraries(${PROJECT_NAME}
-    pico_stdlib
-)
 
 # Enable usb output, disable uart output
 pico_enable_stdio_usb(${PROJECT_NAME} 1)
