--- a/AutoWatering/CMakeLists.txt
+++ b/AutoWatering/CMakeLists.txt
@@ -10,27 +10,17 @@ set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 
 # 1 Create an INTERFACE library aggregating all the common parts of the application
-add_library(decodingFSM INTERFACE)
+add_subdirectory(./lib/decoding-fsm)
+add_subdirectory(./lib/bypass-valve)
+add_subdirectory(./lib/servo-pwm)
+add_subdirectory(./lib/pwm-driver)
 
-target_sources(decodingFSM INTERFACE
-    ${CMAKE_CURRENT_LIST_DIR}/main.c
-    ${CMAKE_CURRENT_LIST_DIR}/lib/decoding-fsm/decoding_fsm.c
-)
+add_executable(${PROJECT_NAME} main.c)
 
-# Link to pico_stdlib (gpio, time, etc. functions)
-target_link_libraries(decodingFSM INTERFACE
-    pico_stdlib
-)
+target_link_libraries(${PROJECT_NAME} decodingFSM bypassValve servoPWM pwmDriver)
 
 # Creates a pico-sdk subdirectory in our project for the libraries
 pico_sdk_init()
-
-# Tell CMake where to find the executable source file
-add_executable(${PROJECT_NAME}
-    main.c
-)
-
-target_link_libraries(${PROJECT_NAME} decodingFSM)
 
 # Create map/bin/hex/uf2 files
 pico_add_extra_outputs(${PROJECT_NAME})
